# Project_FaceRecognize

./: Env_jetson.docx  README.md
OfflineProject/: CMakeCache.txt  CMakeLists.txt
OfflineProject/data/: data_schedule.csv  initsql.csv  studentattendance.csv
OfflineProject/header/: TrainModel.hpp  UltraFace.hpp  class.hpp  student.hpp
OfflineProject/list/: studentList.csv  studentList.txt
OfflineProject/src/: .detect.cpp.swp  TrainModel.cpp  Traing.cpp  UltraFace.cpp  class.cpp  detect.cpp  detect_mt.cpp  student.cpp  train_model2.cpp
OfflineProject/src/temp/: UltraFace.cpp  detect.cpp  temp1.cpp  temp2.cpp  temp3.cpp  temp4.cpp  temp5.cpp  temp6.cpp  temp7.cpp  temp8.cpp
OfflineProject/src/temp_ULTRA/: UltraFace.7z  UltraFace.cpp
OfflineProject/src/temp_ULTRA/UltraFace/: UltraFace.cpp  UltraFace.hpp
OfflineProject/videotest/: 160fps.mov  260fps.mov  60fps.mov  tamnguyen.mov
OnlineProject/src/: class.cpp  detect1.cpp  student.cpp  train_model2.cpp
temp/Dlib/: readme.txt
temp/list/: readme.txt
